<resources>
    <string name="app_name">Tracker</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="next">Next</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="invite_code">XXXXXX</string>
    <string name="save_this_invite_code_your_friends_will_need_it_to_join_your_circle">Save this invite code. Your friends will need it to join your circle</string>
    <string name="register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="communicate">Communicate</string>
    <string name="join_circle">Join Circle</string>
    <string name="my_circle">My Circle</string>
    <string name="joined_circle">Joined Circle</string>
    <string name="invite_members">Invite Members</string>
    <string name="share_location">Share Location</string>
    <string name="title_activity_maps">Map</string>
</resources>
