<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_join_circle"
            android:icon="@drawable/ic_join_circle"
            android:title="@string/join_circle" />
        <item
            android:id="@+id/nav_my_circle"
            android:title="@string/my_circle" />
        <item
            android:id="@+id/nav_joined_circle"
            android:icon="@drawable/ic_joined_circle"
            android:title="@string/joined_circle" />
        <item
            android:id="@+id/nav_invite_members"
            android:title="@string/invite_members"/>

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share_location"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_location"/>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
