<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InviteCodeActivity">

    <TextView
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/invite_code"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_save_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/code"
        android:layout_marginTop="20dp"
        android:text="@string/save_this_invite_code_your_friends_will_need_it_to_join_your_circle"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_save_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/register" />

</RelativeLayout>